src/test/deca/syntax/valid/SyntaxObject/test_decl.deca
// Description:
//  test visibilité pour une classe et sa classe fille                        
//
// Resultats:
//  
// 
// Historique:
//    cree le 15/01/2023



//initialisaton de la classe mère et de ses attributs, test de visibilité dans la classe même
class A{
    public String pubfield="attribut public valide pour";
    protected String protfield="attribut protected valide pour";
    private String privfield="attribut private valide pour";
    package String packfield="attribut package valide pour";
    
    public void method1(){
        println(pubfield + "la classe elle même\n");
        println(protfield + "la classe elle même\n");
        println(privfield + "la classe elle même\n");
        println(packfield + "la classe elle même\n");
    }
}

//visibilité dans la classe fille
class B extends A{
    public void method1(){
        println(pubfield + "la classe fille\n");
        println(protfield + "la classe fille\n");
        println(packfield + "la classe fille\n");
    }
}

class C{}


{
    A a;
    B b;
    a.method1();
    b.method1();  
}