src/test/deca/syntax/invalid/29_block_mal_defini_method.deca
// Description:
//    Test d'un bloc d'une méthode mal défni
//
// Resultats:
//    Ligne 13
//
// Historique:
//    cree le 01/01/2023

class A extends B {
    int x = 5;
    void method(void x, int y){
        class C {}
    }   
}